--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "lavary/laravel-menu": "^1.8",
-        "unisharp/laravel-filemanager": "^2.9"
+        "unisharp/laravel-filemanager": "^2.9",
+        "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
